--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
   },
   "dependencies": {
     "angular": "^1.6.7",
+    "angular-cookie": "^4.1.0",
+    "angular-route": "^1.6.7",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
-    "file-loader": "^1.1.5",
     "express": "^4.16.2",
-    "gzippo": "^0.2.0"
+    "file-loader": "^1.1.5",
+    "gzippo": "^0.2.0",
+    "http-server": "^0.10.0",
+    "ng-token-auth": "0.0.30"
   }
 }
