--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.11",
     "angular": "^1.6.7",
     "angular-cookie": "^4.1.0",
-    "angular-route": "^1.6.7",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
