--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@uirouter/angularjs": "^1.0.11",
     "angular": "^1.6.7",
     "angular-cookie": "^4.1.0",
+    "angular-resource": "^1.6.8",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
