--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular": "^1.6.7",
     "angular-cookie": "^4.1.0",
     "angular-resource": "^1.6.8",
+    "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
