--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classnames": "^2.2.5",
     "file-loader": "^1.1.5",
     "http-server": "^0.10.0",
+    "ng-file-upload": "^12.2.13",
     "ng-token-auth": "0.0.30"
   }
 }
