--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todolist_client",
   "version": "1.0.0",
-  "description": "RG task for Todo List App",
+  "description": "Todo List App client (RG task)",
   "repository": "git",
   "author": "b-artem",
   "license": "ISC",
@@ -34,7 +34,6 @@
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
-    "classnames": "^2.2.5",
     "file-loader": "^1.1.5",
     "http-server": "^0.10.0",
     "ng-file-upload": "^12.2.13",
