--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@uirouter/angularjs": "^1.0.11",
     "angular": "^1.6.7",
     "angular-cookie": "^4.1.0",
+    "angular-flash-alert": "^2.5.0",
     "angular-resource": "^1.6.8",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
