--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "ISC",
   "scripts": {
     "start": "webpack-dev-server --open --progress --hot --config webpack.config.dev.js",
-    "build": "webpack --progress --config webpack.config.prod.js"
+    "build": "webpack --progress --config webpack.config.prod.js",
+    "test": "karma start"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.7",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
@@ -18,6 +20,12 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "jasmine-core": "^2.99.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.9",
     "ngtemplate-loader": "^2.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
