--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,10 @@ jobs:
 
       # run tests!
       - run: npm test
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
