--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ jobs:
   build:
     docker:
       - image: circleci/node:8.9.4-browsers
+        environment:
+          TZ: "/usr/share/zoneinfo/Europe/Kiev"
     working_directory: ~/repo
     steps:
       - checkout
